@@ -15,12 +15,7 @@ a C<DAIA::Unavailable> object is always C<1>.
 
 use strict;
 use base 'DAIA::Availability';
-our $VERSION = '0.27';
-use DateTime::Duration;
-use DateTime::Format::Duration;
-
-use base 'Exporter';
-our @EXPORT_OK = qw(parse_duration normalize_duration);
+our $VERSION = '0.28';
 
 =head1 PROPERTIES
 
@@ -53,96 +48,10 @@ our %PROPERTIES = (
     delay => { 
         filter => sub {
             return 'unknown' if lc("$_[0]") eq 'unknown';
-            return normalize_duration( $_[0] );
+            return DAIA::Availability::normalize_duration( $_[0] );
         }
     }
 );
-
-=head1 FUNCTIONS
-
-This package implements a duration parsing method based on
-code from L<DateTime::Format::Duration::XSD> by Smal D A.
-
-=head2 parse_duration ( $string )
-
-Parses a XML Schema xs:duration string and returns
-a L<DateTime::Duration> object or undef.
-
-=cut
-
-sub parse_duration {
-    return $_[0] if UNIVERSAL::isa( $_[0], 'DateTime::Duration' );
-    my $duration = "$_[0]";
-
-    my ($neg, $year, $mounth, $day, $hour, $min, $sec, $fsec);
-    if ($duration =~ /^(-)?
-                      P
-                      ((\d+)Y)?
-                      ((\d+)M)?
-                      ((\d+)D)?
-                      (
-                      T
-                      ((\d+)H)?
-                      ((\d+)M)?
-                      (((\d+)(\.(\d+))?)S)?
-                      )?
-                    $/x) {
-        ($neg, $year, $mounth, $day, $hour, $min, $sec, $fsec) =
-        ($1,   $3,    $5,      $7,   $10,   $12,  $15,  $17);
-        return unless (grep {defined} ($year, $mounth, $day, $hour, $min, $sec));
-    } else {
-        return;
-    }
-    $duration = DateTime::Duration->new(
-      years   => $year || 0,
-      months  => $mounth || 0,
-      days    => $day || 0,
-      hours   => $hour || 0,
-      minutes => $min || 0,
-      seconds => $sec || 0,
-      nanoseconds => ($fsec ? "0.$fsec" * 1E9  : 0),
-    );
-    $duration = $duration->inverse if $neg;
-    return $duration;
-}
-
-=head2 normalize_duration ( $string-or-duration-object )
-
-Returns a normalized duration (according to XML Schema xs:duration).
-You can pass a duration string or a L<DateTime::Duration> object.
-Returns undef on failure.
-
-=cut
-
-sub normalize_duration {
-    my $duration = $_[0];
-    $duration = parse_duration( $duration )
-        unless UNIVERSAL::isa( $duration, 'DateTime::Duration' );
-    return unless defined $duration;
-
-    return "P0D" if $duration->is_zero;
-
-    my $fmt = DateTime::Format::Duration->new(
-          pattern => '%PP%YY%mM%dDT%HH%MM%S.%NS',
-          normalize => 1,
-    );
-
-    my %d = $fmt->normalize( $duration );
-    if (exists $d{seconds} or exists $d{nanoseconds}) {
-        $d{seconds} = ($d{seconds} || 0)
-                         + (exists $d{nanoseconds} ? $d{nanoseconds} / 1E9 : 0);
-    }
-    my $str = $d{negative} ? "-P" : "P";
-    $str .= "$d{years}Y" if exists $d{years} and $d{years} > 0;
-    $str .= "$d{months}M" if exists $d{months} and $d{months} > 0;
-    $str .= "$d{days}D" if exists $d{days} and $d{days} > 0;
-    $str .= "T" if grep {exists $d{$_} and $d{$_} > 0} qw(hours minutes seconds);
-    $str .= "$d{hours}H" if exists $d{hours} and $d{hours} > 0;
-    $str .= "$d{minutes}M" if exists $d{minutes} and $d{minutes} > 0;
-    $str .= "$d{seconds}S" if exists $d{seconds} and $d{seconds} > 0;
-
-    return $str;
-}
 
 1;
 
